HVAC Backup 2/objects/API_Log__c(1).object
<CustomObject>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>API Logs</relationshipLabel>
        <relationshipName>API_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Class_Name__c</fullName>
        <label>Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>for contact API</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>API Logs</relationshipLabel>
        <relationshipName>API_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Point__c</fullName>
        <label>End Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Line_Number__c</fullName>
        <label>Error Line Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_message__c</fullName>
        <label>Error message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Method_Name__c</fullName>
        <label>Method Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Request</label>
        <referenceTo>ProductRequest</referenceTo>
        <relationshipLabel>API Logs</relationshipLabel>
        <relationshipName>API_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Body__c</fullName>
        <label>Request Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Body__c</fullName>
        <label>Response Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response_Status_Code__c</fullName>
        <label>Response Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Time__c</fullName>
        <label>Response Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>API Logs</relationshipLabel>
        <relationshipName>API_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targer_Record_Id__c</fullName>
        <label>Targer Record Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template_Name__c</fullName>
        <label>Template Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>API Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Class_Name__c</columns>
        <columns>Response_Body__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>6/14/2025 12:00 AM</value>
        </filters>
        <filters>
            <field>Class_Name__c</field>
            <operation>equals</operation>
            <value>SendCustomerDetails</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Contact_API_Logs</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Response_Body__c</columns>
        <columns>Method_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Name__c</field>
            <operation>equals</operation>
            <value>SendContactDetails</value>
        </filters>
        <label>Contact API Logs</label>
    </listViews>
    <listViews>
        <fullName>Contract_API</fullName>
        <columns>NAME</columns>
        <columns>Class_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Response_Body__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Name__c</field>
            <operation>equals</operation>
            <value>SendContractDetailsSAPAPI</value>
        </filters>
        <label>Contract API</label>
    </listViews>
    <listViews>
        <fullName>Customer_API_Logs</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Response_Body__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Name__c</field>
            <operation>equals</operation>
            <value>SendCustomerDetails</value>
        </filters>
        <label>Customer API Logs</label>
    </listViews>
    <listViews>
        <fullName>FGR_API</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Method_Name__c</columns>
        <columns>Error_message__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Name__c</field>
            <operation>equals</operation>
            <value>SAPCaptureFGRBatch</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>5/7/2025 12:00 AM</value>
        </filters>
        <label>FGR API</label>
    </listViews>
    <listViews>
        <fullName>Inventory_Update_Logs</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Error_message__c</columns>
        <columns>Error_Line_Number__c</columns>
        <columns>Method_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Name__c</field>
            <operation>equals</operation>
            <value>SAPInventoryUpdateBatch</value>
        </filters>
        <label>Inventory Update Logs</label>
    </listViews>
    <listViews>
        <fullName>MR_API</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Response_Body__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Name__c</field>
            <operation>equals</operation>
            <value>SendMRDetailsSAPAPI</value>
        </filters>
        <label>MR API</label>
    </listViews>
    <listViews>
        <fullName>Serial_Number_API</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Error_message__c</columns>
        <columns>Status__c</columns>
        <columns>Class_Name__c</columns>
        <columns>Response_Time__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Name__c</field>
            <operation>equals</operation>
            <value>AssetDetailsDisplayScreenController</value>
        </filters>
        <label>Serial Number API</label>
    </listViews>
    <listViews>
        <fullName>Today_s_MR_API_Logs</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Response_Body__c</columns>
        <columns>Response_Status_Code__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Class_Name__c</field>
            <operation>equals</operation>
            <value>SendMRDetailsSAPAPI</value>
        </filters>
        <label>Today&apos;s MR API Logs</label>
    </listViews>
    <listViews>
        <fullName>Whatsapp_Logs</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Response_Body__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Class_Name__c</field>
            <operation>equals</operation>
            <value>WhatsAppNotificationService</value>
        </filters>
        <label>Whatsapp Logs</label>
    </listViews>
    <nameField>
        <label>API Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>